# MCP-Book-Project

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_api.py  test_server.py
