[project]
name = "mcp-book-project"
version = "0.1.0"
description = "MCP server for querying the Books API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.2",
]

[project.scripts]
mcp-books-server = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
